# dagster_jobs

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  requirements.txt  workspace.yaml
dagster-project/: jobs.json  pyproject.toml
dagster-project/.tmp_dagster_home_eqpueym3/history/: runs.db
dagster-project/.tmp_dagster_home_eqpueym3/history/runs/: 502faf04-1e9c-4294-9acb-a086683e05ed.db  index.db
dagster-project/.tmp_dagster_home_eqpueym3/schedules/: schedules.db
dagster-project/.tmp_dagster_home_eqpueym3/storage/: get_jobs
dagster-project/.tmp_dagster_home_eqpueym3/storage/502faf04-1e9c-4294-9acb-a086683e05ed/compute_logs/: spktnuiq.err  spktnuiq.out
dagster-project/src/dagster_project/defs/: fetch_serpapi_jobs.py  hello_world.py
